finished the bonuses, added tube and cylinder. added folder for json files. fixed bugs. and finished stage 5